project3: add RemoteAddressesCollector