@@ -16,7 +16,7 @@ public class RequestedResourcesCollector extends LogStatsCollector {
     @Override
     public FormatterComponent collect(LogSourceWrapper logWrapper) {
         return FormatterComponent.builder()
-            .header(String.format("%d самых частозапрашиваемых ресурсов", RESOURCES_LIMIT))
+            .header("%d самых частозапрашиваемых ресурсов".formatted(RESOURCES_LIMIT))
             .tableHeaders(List.of("Ресурс", "Количество запросов"))
             .lines(getStatsLines(logWrapper))
             .build();
